Fix: Introductory helper layer background is overlapping

--- a/frontend/www/sass/components/_buttons.scss
+++ b/frontend/www/sass/components/_buttons.scss
@@ -16,3 +16,8 @@
 .introjs-skipbutton {
   color: var(--btn-intro-js-font-color) !important;
 }
+
+// INTROJS HELPERLAYER CUSTOMIZATION
+.introjs-helperLayer {
+  background-color: var(--wmd-button-bar-background-color) !important;
+}
